list items formatted, take quiz script updated

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ time, mark, audio, video {
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+footer, header, hgroup, menu, nav, section, div {
   display: flex; }
 
 body {
@@ -230,112 +230,47 @@ button {
 .lists .quizListHeader {
   margin: 20px 0; }
 .lists .quizList {
-  display: flex;
-  flex-direction: column;
   width: 100%;
   margin-top: 25px; }
-  .lists .quizList .listItemTopLabel {
-    position: absolute;
-    bottom: 38px;
-    left: 12px;
-    font-size: 12px;
-    color: #9a9b94;
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    -transform: rotate(-45deg); }
-  .lists .quizList .listItem {
+  .lists .quizList .listItem .listItemDifficulty {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    padding-bottom: 5px;
-    border-bottom: 1px solid #ccccc9;
-    margin-bottom: 5px;
-    width: 100%; }
-    .lists .quizList .listItem .listItemName {
-      height: 25px;
-      width: 64%;
-      padding-left: 3%;
-      display: flex;
-      align-items: center; }
-      @media screen and (min-width: 375px) {
-        .lists .quizList .listItem .listItemName {
-          padding-right: 10px; } }
-    .lists .quizList .listItem .listItemDifficulty {
-      width: 25px;
-      height: 25px;
-      font-size: 14px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 50%;
-      border: 1px solid #ccccc9;
-      -moz-box-shadow: 5px 5px 5px -4px #999;
-      -webkit-box-shadow: 5px 5px 5px -4px #999;
-      box-shadow: 5px 5px 5px -4px #999;
-      position: relative; }
-    .lists .quizList .listItem .diff1 {
-      background-color: #FCF593; }
-    .lists .quizList .listItem .diff2 {
-      background-color: #FCD773; }
-    .lists .quizList .listItem .diff3 {
-      background-color: #FCC067; }
-    .lists .quizList .listItem .diff4 {
-      background-color: #FCAD58; }
-    .lists .quizList .listItem .diff5 {
-      background-color: #F39543; }
-    .lists .quizList .listItem .listItemCategory {
-      height: 25px;
-      width: 22%;
-      font-size: 80%;
-      color: #797973;
-      position: relative;
-      display: flex;
-      align-items: center;
-      padding-left: 5px; }
-      .lists .quizList .listItem .listItemCategory .listItemTopLabelCategory {
-        left: 18px; }
-      @media screen and (min-width: 375px) {
-        .lists .quizList .listItem .listItemCategory {
-          padding-left: 10%; }
-          .lists .quizList .listItem .listItemCategory .listItemTopLabelCategory {
-            left: 30px; } }
-    .lists .quizList .listItem .listItemScore {
-      height: 25px;
-      width: 22%;
-      font-size: 80%;
-      color: #797973;
-      position: relative;
-      display: flex;
-      align-items: center;
-      padding-left: 5px; }
-      .lists .quizList .listItem .listItemScore .listItemTopLabelScore {
-        left: 18px; }
-      @media screen and (min-width: 375px) {
-        .lists .quizList .listItem .listItemScore {
-          padding-left: 10%; }
-          .lists .quizList .listItem .listItemScore .listItemTopLabelScore {
-            left: 30px; } }
-    .lists .quizList .listItem .go {
-      height: 25px;
-      width: 8%;
-      padding-right: 2%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      font-size: 24px; }
-      .lists .quizList .listItem .go:hover {
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 50%;
+    height: 22px;
+    width: 22px; }
+  .lists .quizList .listItem .diff1 {
+    background-color: #FCF593; }
+  .lists .quizList .listItem .diff2 {
+    background-color: #FCD773; }
+  .lists .quizList .listItem .diff3 {
+    background-color: #FCC067; }
+  .lists .quizList .listItem .diff4 {
+    background-color: #FCAD58; }
+  .lists .quizList .listItem .diff5 {
+    background-color: #F39543; }
+  .lists .quizList .listItem .listItemScore {
+    font-size: 80%;
+    color: #797973; }
+  .lists .quizList .listItem .listItemGo .go {
+    padding-right: 2%;
+    flex-direction: row;
+    align-items: center;
+    font-size: 24px; }
+    .lists .quizList .listItem .listItemGo .go:hover {
+      color: #6172da; }
+    .lists .quizList .listItem .listItemGo .go .faText {
+      display: none;
+      font-size: 12px; }
+      @media screen and (min-width: 576px) {
+        .lists .quizList .listItem .listItemGo .go .faText {
+          display: flex; } }
+      .lists .quizList .listItem .listItemGo .go .faText:hover {
         color: #6172da; }
-      .lists .quizList .listItem .go .faText {
-        display: none;
-        font-size: 12px; }
-        @media screen and (min-width: 576px) {
-          .lists .quizList .listItem .go .faText {
-            display: flex; } }
-        .lists .quizList .listItem .go .faText:hover {
-          color: #6172da; }
 .lists .listSelectionButtons {
-  display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center; }
