--- a/src/styles/_quiz.scss
+++ b/src/styles/_quiz.scss
@@ -50,23 +50,51 @@
   }
 
   .spacedRepContainer {
-    display: flex;
     flex-direction: column;
-  }
-  .spacedRepGraphic{
     width: 100%;
-    .cell {
+  }
+  .spacedRepStats {
+    flex-direction: column;
+    width: 100%;
+  }
+  .spacedRepObjectContainer {
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .spacedRepObject{
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 2px;
+    width: 2em;
+
+    .questionConstant, .currentQuestion, .priorQuestion, .nextQuestion, .false, .true, .transparent {
+      width: 100%;
+      height: 20px;
+      text-align: center;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+    .questionConstant {
       border: 1px solid #333;
       text-align: center;
     }
-    .currentCell {
+    .currentQuestion {
       border: 2px solid black;
     }
-    .priorCell {
+    .priorQuestion {
       background-color: #ccc;
     }
-    .nextCell {
+    .nextQuestion {
       background-color: #4d4; 
+    }
+    .false {
+      color: red;
+    }
+    .true {
+      color: green;
     }
   }
 
