found index problem

--- a/src/styles/_user.scss
+++ b/src/styles/_user.scss
@@ -16,7 +16,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
+  width: 100%;
   .profileInput {
     font-size: 18px;
     padding: 6px;
