--- a/src/index.css
+++ b/src/index.css
@@ -387,7 +387,8 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start; }
+  align-items: center;
+  width: 100%; }
   .userForm .profileInput {
     font-size: 18px;
     padding: 6px;
@@ -505,40 +506,71 @@ button {
     .quiz .results .nextButton {
       width: 250px; }
 
-.modalMask {
-  background-color: rgba(0, 0, 0, 0.2);
-  position: absolute;
-  width: 100%;
-  height: 100%;
+.modalContainer, .loadingContainer {
+  position: fixed;
   top: 0;
   left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2000;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  z-index: 100; }
+  align-items: center; }
 
-.modal {
+.modalBackground, .loadingBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%; }
+
+.modalBackground {
+  background-color: #333;
+  opacity: 0.5; }
+
+.loadingBackground {
+  background-color: #ddd;
+  opacity: 0.2; }
+
+.modalPanel {
   position: relative;
-  width: 85vw;
-  padding: 15vw;
-  background-color: rgba(254, 254, 254, 0.75);
+  background-color: white;
+  outline: none;
+  border: 2px solid black;
+  box-shadow: 0 0 4px #DA2536;
+  width: 300px;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.modalMessage {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  border: 2px solid #a94d88;
-  color: #a94d88;
-  border-radius: 4px;
-  z-index: 101; }
-  .modal .message {
-    font-size: 24px;
-    text-align: center; }
-  .modal .modalButton {
-    position: absolute;
-    top: 5px;
-    right: 5px; }
+  padding: 20px; }
 
+.modalExitButton {
+  color: #DA2536;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 15px;
+  font-size: 20px;
+  cursor: pointer; }
+
+.loadingIcon {
+  font-size: 120px;
+  opacity: 0.6;
+  animation: spin 3s linear infinite; }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
 .tooltip {
   position: relative; }
   .tooltip .tooltipText {
