--- a/src/styles/_quiz.scss
+++ b/src/styles/_quiz.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 100%;
   }
   .questionOptions {
     flex: 1;
@@ -28,6 +29,9 @@
     -moz-box-shadow: inset 5px 5px 5px -4px $insetShadow;
     -webkit-box-shadow: inset 5px 5px 5px -4px $insetShadow;
     box-shadow: inset 5px 5px 5px -4px $insetShadow;
+  }
+  .questionTextInput {
+    height: 1.5em;
   }
   .questionButtons { // SEE ALSO '_buttons.scss'
     display: flex;
