started test suite

--- a/src/styles/_quiz.scss
+++ b/src/styles/_quiz.scss
@@ -31,7 +31,7 @@
     box-shadow: inset 5px 5px 5px -4px $insetShadow;
   }
   .questionTextInput {
-    height: 1.5em;
+    font-size: 16px;
   }
   .questionButtons { // SEE ALSO '_buttons.scss'
     display: flex;
