--- a/src/index.css
+++ b/src/index.css
@@ -451,7 +451,7 @@ button {
     -webkit-box-shadow: inset 5px 5px 5px -4px #9c9ac6;
     box-shadow: inset 5px 5px 5px -4px #9c9ac6; }
   .quiz .questionTextInput {
-    height: 1.5em; }
+    font-size: 16px; }
   .quiz .questionButtons {
     display: flex;
     flex-direction: row;
