--- a/src/styles/_quiz.scss
+++ b/src/styles/_quiz.scss
@@ -73,7 +73,13 @@
     margin: 2px;
     width: 2em;
 
-    .questionConstant, .currentQuestion, .priorQuestion, .nextQuestion, .false, .true, .transparent {
+    .question-constant, 
+    .currentQuestion, 
+    .priorQuestion, 
+    .nextQuestion, 
+    .false, 
+    .true, 
+    .transparent {
       width: 100%;
       height: 20px;
       text-align: center;
@@ -81,18 +87,34 @@
       justify-content: center;
       align-items: center;
     }
-    .questionConstant {
+    .question-constant {
       border: 1px solid #333;
       text-align: center;
     }
-    .currentQuestion {
+    .index-current {
       border: 2px solid black;
+      background-color: yellow;
     }
-    .priorQuestion {
-      background-color: #ccc;
+    .index-next {
+      background-color: rgb(145, 195, 224);
     }
-    .nextQuestion {
-      background-color: #4d4; 
+    .insert-after-if-true {
+      background-color: rgb(174, 243, 174); 
+    }
+    .insert-before-if-true {
+      background-color: rgb(100, 160, 94); 
+    }
+    .insert-after-if-false {
+      background-color: rgb(228, 120, 87); 
+    }
+    .insert-before-if-false {
+      background-color: rgb(138, 91, 70); 
+    }
+    .index-redirect {
+      background-color: rgb(169, 182, 160); 
+    }
+    .index-redirect-next {
+      background-color: rgb(122, 175, 206);
     }
     .false {
       color: red;
