--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -10,20 +10,29 @@ button {
     background-color: $buttonBackgroundColorHover;
   }
 }
-.enterButton, .loginButton, .submitButton {
+.enterButton, 
+.loginButton, 
+.submitButton {
   font-size: 35px;
 }
-.enterButton, .aboutButton, .loginButton, .createAccountButton {
+.enterButton, 
+.aboutButton, 
+.loginButton, 
+.createAccountButton {
   width: $inputFieldWidth;
 }
-.aboutButton, .createAccountButton, .gotoQuizListButton, 
+.aboutButton, 
+.createAccountButton, 
+.gotoQuizListButton, 
 .showNextOptionButton {
   font-size: 20px;
   min-height: 40px;
 }
 
  .gotoQuizListButton,
-.checkAccuracyButton, .takeAnotherQuizButton, .submitButton {
+.checkAccuracyButton, 
+.takeAnotherQuizButton, 
+.submitButton {
   min-width: 100px;
   max-width: 200px;
 }
