--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -10,6 +10,7 @@
   align-items: center;
 
   .burgerMenu {
+    width: 200px;
     padding: 20px;
     position: absolute;
     display: flex;
@@ -22,13 +23,22 @@
     overflow: none;
     @include slide;
     z-index: $burgerIndex;
+    border-radius: 0 0 6px 6px;
+
     li {
       margin-bottom: 10px;
+    }
+    .loginMenuItem,
+    .profileMenuItem,
+    .quizListMenuItem,
+    .aboutMenuItem,
+    .settingsMenuItem,
+    .spacedrepMenuItem {
+      text-decoration: none;
       &:hover:not(.inactive) {
         color: $fontColorDarkHover;
       }
     }
-    border-radius: 0 0 6px 6px;
   }
   .burgerHide {
     top: -400%;
@@ -52,23 +62,34 @@
     -moz-box-shadow: 0px 4px 4px $shadow;
     -webkit-box-shadow: 0px 4px 4px $shadow;
     box-shadow: 0px 4px 4px $shadow;
-    .headerLabel { // h1
+    .header-label { // h1
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      flex-grow: 1;
+      flex-shrink: 1;
+      flex-basis: 1;
       font-size: 24px;
       color: $fontColorHeader;
-      width: 100%;
+      text-align: center;
     }
-    
-    .burgerIcon {
-      right: 0;
+    .burger-icon-container {
+      height: 100%;
+      width: $header-height;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .header-score,
+    .burger-icon {
       display: flex;
       flex-direction: column;
       color: $fontColorIconHeader;
-      height: $header-height;
+      height: 60%;
       width: $header-height;
       justify-content: center;
       align-items: center;
-      position: absolute;
-      top: 0; 
       &:hover {
         color: $fontcolorWhiteHover; 
       }
